--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ dalam pengembangan karakter, kepemimpinan, dan prestasi.
   <div class="card">👑 Radhika Fachry Pratama</div>
   <div class="card">⭐ Muhammad Denendra Kenzi</div>
   <div class="card">✍️ Safiera Putri Pameswari</div>
-  <div class="card">📱 Ilyas Brilliant Al-Fawwaz</div>
-  <div class="card">📚 Sie Kreatif</div>
+  <div class="card">💵 faaizah alyyah zulfa</div>
+  <div class="card">📱 Ilyas Brilliant Alfawwaz</div>
 </div>
 </section>
 
